--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,12 @@
+=\=\=\=\=\=\=
+<<<<<<<=Updated upstream
+>>>>>>>=Stashed changes
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
+encoding//src/main/webapp/WEB-INF/message.properties=UTF-8
+encoding//src/main/webapp/WEB-INF/views/carrinho/itens.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/home.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/produtos/lista.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/rodape.jsp=UTF-8
 encoding/<project>=UTF-8
