--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -8,4 +8,5 @@ encoding//src/main/webapp/WEB-INF/views/carrinho/itens.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/home.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/produtos/lista.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/rodape.jsp=UTF-8
+encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
