--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!--Email -->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
 	</dependencies>
 
 	<!-- <repositories> <repository> <id>spring-milestones</id> <name>Spring 
