--- a/.classpath
+++ b/.classpath
@@ -56,4 +56,5 @@
   <classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar" sourcepath="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/spring-test/4.1.0.RELEASE/spring-test-4.1.0.RELEASE.jar" sourcepath="M2_REPO/org/springframework/spring-test/4.1.0.RELEASE/spring-test-4.1.0.RELEASE-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/springframework/security/spring-security-test/4.0.0.RELEASE/spring-security-test-4.0.0.RELEASE.jar" sourcepath="M2_REPO/org/springframework/security/spring-security-test/4.0.0.RELEASE/spring-security-test-4.0.0.RELEASE-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/postgresql/postgresql/9.4-1201-jdbc41/postgresql-9.4-1201-jdbc41.jar" sourcepath="M2_REPO/org/postgresql/postgresql/9.4-1201-jdbc41/postgresql-9.4-1201-jdbc41-sources.jar"/>
 </classpath>
