--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,13 @@
 		<finalName>casadocodigo</finalName>
 	<plugins>
 		<plugin>
+	        <artifactId>maven-war-plugin</artifactId>
+	        <version>2.4</version>
+	        <configuration>
+	          <failOnMissingWebXml>false</failOnMissingWebXml>
+	        </configuration>
+	      </plugin>
+		  <plugin>
 		    <groupId>org.apache.maven.plugins</groupId>
 		    <artifactId>maven-dependency-plugin</artifactId>
 		    <version>2.3</version>
